staue: development 
version: 0.0.0.5
date: now

[Genereal]
* fixed Hotspot parallax-scrolling behavior
* fixed bug scheduleManager
+ support timing update
+ support Entity move
+ support Allocator Transformation:Position attribute
+ support Allocator Transformation:Direction attribute
+ support Allocator Transformation:Rotate attribute

[Framework]
+ added Entity.moveTo( time, vec2f, bool )
+ added Entity.moveStop()

===========================================================================
staue: development 
version: 0.0.0.4
date: 11.10.07

[General]
+ added Sprite support ImageIndex:Value attribute
+ added Animation support AutoStart:Value attribute
* fixed bug scheduleManager
* fixed bug ResourceImageCell
* fixed Windows event

[Framework]
+ added Menge.getMouseX()
+ added Menge.getMouseY()
+ added Menge.getArrow()
+ added Arrow.setOffsetClick( vec2f )
+ added Arrow.getOffsetClick()


===========================================================================
staue: development 
version: 0.0.0.3
date: 11.10.07

[General]
+ added Entity.onLoader callback

[Framework]
+ added support class Animation
+ added Animation.play()
+ added Animation.stop()
+ added Animation.pause()
+ added Animation.setLooped( bool )
+ added Animation.getLooped()
+ added Animation.setAnimationListener( script )
+ added Animation.setAnimationResource( string )
+ added HotSpot.addPoint( vec2f )
+ added HotSpot.clearPoints();
+ added Menge.getCurrentScene()
+ added Menge.schedule( timing, script )
+ added Menge.scheduleRemove( id )

===========================================================================
staue: development 
version: 0.0.0.2
date: 08.10.07

[Genereal]
* fixed hotspot, but don't corect work in scrolling
+ added support [Entity].xml for build children node

[Framework]
+ added Scene.getNode( NodeName )
+ added Node.getChildren( NodeName, isRecursive )
+ added Node.setLocalPosition( vec2f )
+ added Node.getLocalPosition()
+ added Node.setLocalDirection( vec2f )