@@ -4,8 +4,8 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Game", "src\Game\Game.vcpro
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "Menge", "src\Menge\Menge.vcproj", "{61566E24-14DC-456C-A864-772C5064FDBA}"
 	ProjectSection(ProjectDependencies) = postProject
-		{73E25478-3097-462B-913C-2B5EFC8ADD62} = {73E25478-3097-462B-913C-2B5EFC8ADD62}
 		{CBADA4A8-0E45-4C56-883F-90F87AC5FFF0} = {CBADA4A8-0E45-4C56-883F-90F87AC5FFF0}
+		{73E25478-3097-462B-913C-2B5EFC8ADD62} = {73E25478-3097-462B-913C-2B5EFC8ADD62}
 	EndProjectSection
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Interface", "Interface", "{3D722BE0-FA23-4F25-9EB5-DE38822083E6}"
@@ -41,9 +41,9 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OgreInputSystem", "src\Syst
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OgreApplication", "src\OgreApplication\OgreApplication.vcproj", "{00D7F770-9D10-4A51-B099-94CE79AC3F85}"
 	ProjectSection(ProjectDependencies) = postProject
-		{61566E24-14DC-456C-A864-772C5064FDBA} = {61566E24-14DC-456C-A864-772C5064FDBA}
-		{73E25478-3097-462B-913C-2B5EFC8ADD62} = {73E25478-3097-462B-913C-2B5EFC8ADD62}
 		{CBADA4A8-0E45-4C56-883F-90F87AC5FFF0} = {CBADA4A8-0E45-4C56-883F-90F87AC5FFF0}
+		{73E25478-3097-462B-913C-2B5EFC8ADD62} = {73E25478-3097-462B-913C-2B5EFC8ADD62}
+		{61566E24-14DC-456C-A864-772C5064FDBA} = {61566E24-14DC-456C-A864-772C5064FDBA}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "OgreRenderSystem", "src\System\OgreRenderSystem\OgreRenderSystem.vcproj", "{3380B377-D83A-4BC7-84D3-921E7C646CEE}"
