@@ -4,13 +4,13 @@ def init():
 	#Menge.setCurrentScene("Match3")
 	#Menge.setCurrentScene("Buka")
 	#Menge.setCurrentScene("FishDemo")	
-	#Menge.setCurrentScene("FishDemo")
-	Menge.schedule( 1000, setScene )
+	Menge.setCurrentScene("FishDemo")
+	Menge.schedule( 5000, setScene )
 	return True
 	pass
 
 def setScene():
-	Menge.setCurrentScene("FishDemo")
+	Menge.setCurrentScene("FishDemo2")
 	Menge.schedule( 1000, setTest )
 	pass
 
